[gd_scene load_steps=7 format=3 uid="uid://drui5ki31g3ml"]

[ext_resource type="Script" path="res://Scenes/GUI/gui.gd" id="1_2j61r"]
[ext_resource type="Texture2D" uid="uid://dvstxny5ewhiv" path="res://Assets/art/objects_01.png" id="2_7p526"]
[ext_resource type="Texture2D" path="res://Assets/art/tuto_01.png" id="3_ylvh4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ubxre"]
atlas = ExtResource("2_7p526")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78oju"]
atlas = ExtResource("2_7p526")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3g00"]
atlas = ExtResource("2_7p526")
region = Rect2(128, 0, 64, 64)

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_2j61r")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 176.0
offset_bottom = 101.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="MegaMarais" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ubxre")
expand_mode = 2

[node name="GrMaraisLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Graine Marais : 0"
horizontal_alignment = 2

[node name="MegaPrairie" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_78oju")
expand_mode = 2

[node name="GrPrairieLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Graine Prairie : 0"
horizontal_alignment = 2

[node name="MegaForet" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_d3g00")
expand_mode = 2

[node name="GrForetLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Graine Foret : 0"
horizontal_alignment = 2

[node name="Debug" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="MegattilesPCOnt" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = 118.0
grow_horizontal = 0
scale = Vector2(1.00728, 1)
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MegattilesPCOnt"]
layout_mode = 2

[node name="MegaMlabel" type="Label" parent="MegattilesPCOnt/VBoxContainer"]
layout_mode = 2
text = "MegaMarais: 0"

[node name="MegPrairieLabel" type="Label" parent="MegattilesPCOnt/VBoxContainer"]
layout_mode = 2
text = "MegaPrairie: 0"

[node name="MegForetlabel" type="Label" parent="MegattilesPCOnt/VBoxContainer"]
layout_mode = 2
text = "MegaForet: 0"

[node name="tut labe" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 0, 0.337255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.854902)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 45
text = "Tab = tutorial
Esc = quit
Fleches = camera
Enter = cheating"

[node name="tutorial" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_ylvh4")
expand_mode = 5
stretch_mode = 3

[node name="Transition" type="ColorRect" parent="."]
visible = false
offset_right = 1597.0
offset_bottom = 899.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.243137, 0.152941, 0.192157, 1)
